# rust-port-scanner

./: .dockerignore  .gitignore  CHANGELOG.md  CI-CD-QUICKREF.md  CLI_MUTUAL_EXCLUSION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  FILES-TO-DELETE.md  GIT-GITHUB-QUICKSTART.md  GIT-SETUP-GUIDE.md  LICENSE-APACHE  LICENSE-MIT  MAIN-FILES-EXPLANATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT-SUMMARY.md  QUICKSTART.md  README.md  README.md.backup  REFACTORING.md  SECURITY.md  SERVICE-DETECTION-GUIDE.md  SWITCHED-TO-MAIN-NEW.md  deny.toml  docker-compose.yml  hello.rs  scan_127_0_0_1_1759651668.csv  scan_127_0_0_1_1759651668.txt  setup-git.ps1  temp_strategy.txt
.github/: CI-CD-GUIDE.md  PIPELINE-SUMMARY.md
.github/workflows/: ci.yml  dependency-review.yml  security.yml
benches/: scan_benchmark.rs
src/: cli.rs  constants.rs  errors.rs  json_output.rs  lib.rs  main_legacy.rs  main_new.rs  port_info.rs  reporter.rs  scanner.rs  smb_fingerprint.rs  version_detector.rs
src/application/: detect_os.rs  detect_service.rs  mod.rs  scan_ports.rs
src/domain/: mod.rs  os.rs  port.rs  scan_result.rs  service.rs
src/infrastructure/: mod.rs  network.rs
src/presentation/: formatter.rs  mod.rs  observer.rs
src/scanning/: config.rs  detector.rs  executor.rs  mod.rs  strategy.rs
