[package]
name = "port-scanner"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular and extensible port scanner written in Rust"
repository = "https://github.com/yourusername/port-scanner"
license = "MIT OR Apache-2.0"
keywords = ["network", "security", "scanner", "port", "pentesting"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false

[[bin]]
name = "port-scanner"
path = "src/main.rs"

[lib]
name = "port_scanner"
path = "src/lib.rs"
